# ece-6122

./: .gitignore
final_project/: CMakeLists.txt
final_project/include/: chessComponent.h  objloader.hpp  objloader2.hpp  openglinit.h
final_project/include/chessbackend/: ChessBackend.h  ChessStateManager.h
final_project/src/: assimp_tutorial.cpp  chessComponent.cpp  chess_3D_view.cpp  main2.cpp  objloader.cpp  objloader2.cpp  openglinit.cpp  tutorial.cpp
final_project/src/chessbackend/: ChessBackend.cpp  ChessStateManager.cpp  testbackend.cpp  testcombined.cpp  teststatemanager.cpp
lab0/: Lab0_Problem1.cpp
lab0/Lab0_submission/: Lab0_Problem2.cpp
lab1/: CMakeLists.txt  GRADER_README.md
lab1/include/: CentipedeManager.hpp  ECE_Centipede.hpp  ECE_LaserBlast.hpp  GameLogicManager.hpp  GameUtils.hpp  GameWindowManager.hpp  LaserManager.hpp  MushroomManager.hpp  SharedDataTypes.hpp  Spider.hpp  StarShip.hpp
lab1/src/: CentipedeManager.cpp  ECE_Centipede.cpp  ECE_LaserBlast.cpp  GameLogicManager.cpp  GameUtils.cpp  MushroomManager.cpp  Spider.cpp  StarShip.cpp  main.cpp  testCode.cpp
lab2/: .clang-format  CMakeLists.txt
lab2/include/: GameOfLife.hpp  GameOfLife.tpp
lab2/src/: GameOfLife.cpp  SampleCode.cpp  main.cpp
lab3/: 12951_Stone_Chess_Board_v1_L3.mtl  CMakeLists.txt  readme.md
lab3/data/: 12951_Stone_Chess_Board_v1_L3.mtl  StandardShading.fragmentshader
lab3/data/Chess/: chess3.mtl
lab3/include/: baseoglmanaging.hpp  chessCommon.h  chesspiece.hpp  chesspiecemanager.hpp  cmdlinehandler.hpp  controls.hpp  objloader.hpp  transform.hpp
lab3/include/chessbackend/: ChessBackend.h  ChessStateManager.h
lab3/include/ogl_utils/: controls.hpp  objloader.hpp
lab3/src/: baseoglmanaging.cpp  chessComponent.cpp  cmdlinehandler.cpp  controls.cpp  objloader.cpp  shader.cpp  test.cpp  texture.cpp  transform.cpp  tutorial_test.cpp  vboindexer.cpp
lab3/src/chessbackend/: ChessBackend.cpp  ChessStateManager.cpp  testbackend.cpp  testcombined.cpp  teststatemanager.cpp
lab3/src/ogl_utils/: objloader.cpp  shader.cpp  texture.cpp
lab4/: CMakeLists.txt
lab4/include/: GameOfLife.hpp  GameOfLifeImplementations.hpp
lab4/src/: GameOfLife.cu  GameOfLifeImplementations.cu  lab4.cu
lab5/client/: CMakeLists.txt  README.md
lab5/client/include/: client.hpp  packet.hpp
lab5/client/src/: client.cpp  main.cpp
lab5/server/: CMakeLists.txt  README.md
lab5/server/include/: packet.hpp  server.hpp
lab5/server/src/: main.cpp  server.cpp
lab6/: CMakeLists.txt  README.md
lab6/src/: main.cpp
